# weather-energy-pipeline

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
app/: README.md  fastapi_app.py  streamlit_app.py
infra/: README.md
src/weather_energy_pipeline/: __init__.py  __main__.py
src/weather_energy_pipeline/clients/: carbon_intensity.py  openmeteo.py  openweather.py
src/weather_energy_pipeline/config/: dependencies.py  settings.py
src/weather_energy_pipeline/models/: fetch_window.py  raw_payload.py
src/weather_energy_pipeline/pipeline/: run_ingestion.py
src/weather_energy_pipeline/repositories/: base.py  carbon_intensity.py  openmeteo.py  openweather.py
src/weather_energy_pipeline/storage/: base.py  s3.py
tests/clients/: test_carbonintensity.py  test_openmeteo.py  test_openweather.py
tests/config/: test_settings.py
tests/models/: test_fetch_window.py
tests/repositories/: test_openmeteo.py
tests/storage/: test_s3.py
