[project]
name = "weather-energy-pipeline"
version = "0.1.0"
description = "Weather and energy data ingestion pipeline with Prefect orchestration and S3-based medallion architecture."
readme = "README.md"
authors = [
    { name = "David Bambrough", email = "djbambrough@mac.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]

[project.scripts]
weather-energy-pipeline = "weather_energy_pipeline:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
]

# -------------------------
# Ruff (linting + formatting)
# -------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
# Tight but not noisy: correctness, imports, bugs, upgrades.

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# -------------------------
# Pytest
# -------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "slow: slow tests",
]

# -------------------------
# MyPy
# -------------------------
[tool.mypy]
python_version = "3.12"
strict = true
explicit_package_bases = true
warn_return_any = true
show_error_codes = true
pretty = true
mypy_path = "src"
