[project]
name = "weather-energy-pipeline"
version = "0.1.0"
description = "Weather and energy data ingestion pipeline with Prefect orchestration and S3-based medallion architecture."
readme = "README.md"
authors = [
    { name = "David Bambrough", email = "djbambrough@mac.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "boto3>=1.42.63",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "types-requests>=2.32.4.20260107",
]

[project.scripts]
weather-energy-pipeline = "weather_energy_pipeline:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "boto3-stubs[s3]>=1.42.63",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]

# -------------------------
# Ruff (linting + formatting)
# -------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
# Tight but not noisy: correctness, imports, bugs, upgrades.

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# -------------------------
# Pytest
# -------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "slow: slow tests",
]

# -------------------------
# ty (type checking)
# -------------------------
[tool.ty]

[tool.ty.environment]
python-version = "3.12"
